# string-algorithms

./: .gitattributes  .gitignore  .gitmodules  .travis.yml  LICENSE  Makefile  README.md
approx_shortest_superstring/: approximate_shortest_superstring.py  exact_bruteforce.py
approximate_string_matching/: approximate_boyer_moore.py  bitap_shift_add.py  boyer_moore.py  distance.py  dont_care.py  four_russians.py  four_russians_helpers.py  lcs.py  linear_space_lcs.py  matching_with_dont_cares.py  matching_with_dont_cares_and_mismatches.py  matching_with_mismatches.py  mismatches.py  myers.py
benchar/: CMakeLists.txt  benchar.py
benchar/cbenchar/: CMakeLists.txt  README.md  build.sh
benchar/cbenchar/src/: cbenchar.cpp
common/: LCA.py  dawg.py  lca.py  numeric.py  prefix.py  suffix.py  trie.py  wavelet_tree.py
compression/: burrows_wheeler.py  lempel_ziv.py  lempel_ziv_factorization.py  lpf.py  lz78.py  lzw.py
exact_multiple_string_matching/: aho_corasick.py  commentz_walter.py  fast_practical_multi_string_matching.py
exact_string_matching/: backward.py  forward.py  galil_seifaras.py  other.py
generator/: named.py  rand.py  random.py  text_pat_generators.py
longest_common_subsequence/: myers.py
lyndon/: critical_factorization.py  lyndon_factorization.py  maximum_suffix.py
multiple_string_matching/: aho_corasick.py  commentz_walter.py  fast_practical_multi_string_matching.py  multiple_string_matching.py
shortest_common_superstring/: optimal_assignment.py  paluch_elbassoni_zuylen.py  shortest_common_superstring.py  teng_yao.py
string_indexing/: lcp.py  (+13 more)
(+187 files in other folders)
